<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFragment"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/menu_buku"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="20dp"
            android:background="?android:attr/dividerVertical" />
        <TextView
            android:id="@+id/malin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/malin_title"/>
        <TextView
            android:id="@+id/cinderella"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cinderella_title"/>
        <TextView
            android:id="@+id/bawang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bawang_title"/>
        <TextView
            android:id="@+id/toba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/toba_title"/>
        <TextView
            android:id="@+id/tangkuban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tangkuban_title"/>
    </LinearLayout>
</ScrollView>